# blackboard-core

./: .gitignore  DOCS.md  README.md  blackboard.prompts.json  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
blackboard/: __init__.py  cli.py  config.py  core.py  embeddings.py  events.py  flow.py  hierarchy.py  llm.py  mcp.py  memory.py  middleware.py  patching.py  persistence.py  pricing.py  protocols.py  runtime.py  sandbox.py  state.py  streaming.py  telemetry.py  tui.py  usage.py  vectordb.py
blackboard/integrations/: _schemas.py  langchain.py  llamaindex.py
blackboard/persistence/: __init__.py  base.py  postgres.py  sqlite.py
blackboard/serve/: app.py  manager.py
blackboard/stdlib/workers/: browser.py
blackboard/testing/: fixtures.py
blackboard/ui/: app.py
demos/blackboard_code/: __init__.py  main.py
demos/blackboard_code/workers/: __init__.py  coder.py  executor.py  file_ops.py  planner.py  reviewer.py
examples/: __init__.py  coding_agent.py  competitor_analysis.py  example_usage.py  research_assistant.py  research_session.json  resume_screener.py
examples/demos/: __init__.py
examples/demos/blackboard_code/: __init__.py  config.py  main.py
examples/demos/blackboard_code/workers/: __init__.py  coder.py  executor.py  file_ops.py  planner.py  reviewer.py
tests/: test_advanced.py  test_dx.py  test_events_retry.py  test_graph.py  test_hardening.py  test_integrations.py  test_live_apis.py  test_mcp.py  test_orchestrator.py  test_persistence.py  test_phase5.py  test_phase_memory.py  test_review_fixes.py  test_serve.py  test_state.py  test_ui_client.py  test_v101.py  test_v103.py
tests/compliance/: test_idempotence.py
